perf: 修复N+1查询、全表扫描、批量操作性能问题 & 安全配置优化